packages/core/test/fixtures/parser/errors/missing-open-brace.idef0
activity A0 "root"
    I1 "in"
    O1 "out"
}
